; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_tbl.c_tbl_restart.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_tbl.c_tbl_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tbl_node = type { i64, i32, i32 }

@TBL_PART_CDATA = common dso_local global i64 0, align 8
@MANDOCERR_TBLDATA_BLK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"T&\00", align 1
@TBL_PART_LAYOUT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tbl_restart(i32 %0, i32 %1, %struct.tbl_node* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.tbl_node*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.tbl_node* %2, %struct.tbl_node** %6, align 8
  %7 = load %struct.tbl_node*, %struct.tbl_node** %6, align 8
  %8 = getelementptr inbounds %struct.tbl_node, %struct.tbl_node* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @TBL_PART_CDATA, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load i32, i32* @MANDOCERR_TBLDATA_BLK, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @mandoc_msg(i32 %13, i32 %14, i32 %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %12, %3
  %18 = load i64, i64* @TBL_PART_LAYOUT, align 8
  %19 = load %struct.tbl_node*, %struct.tbl_node** %6, align 8
  %20 = getelementptr inbounds %struct.tbl_node, %struct.tbl_node* %19, i32 0, i32 0
  store i64 %18, i64* %20, align 8
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.tbl_node*, %struct.tbl_node** %6, align 8
  %23 = getelementptr inbounds %struct.tbl_node, %struct.tbl_node* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 8
  %24 = load i32, i32* %5, align 4
  %25 = load %struct.tbl_node*, %struct.tbl_node** %6, align 8
  %26 = getelementptr inbounds %struct.tbl_node, %struct.tbl_node* %25, i32 0, i32 2
  store i32 %24, i32* %26, align 4
  ret void
}

declare dso_local i32 @mandoc_msg(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
